--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,9 @@ c/**/*
 scala/**/project
 scala/**/target
 
- ## maven
- maven/**/target
+## maven
+maven/**/target
+
+## nodejs
+node/**/node_modules
+node/**/package-lock.json
